tests/examples/good/misc/good006.lat
int main() {
    boolean b = true; 
    if (b) {
        int a = 42;
    }
    return 0;
}
