tests/examples/bad/invalid_type_multiplication.lat
int main() {
    boolean a, b;
    b * a;
    return 1;
}